# backend/core/dto/request/app.go
@@ -8,14 +8,16 @@ type AppSearch struct {
 }
 
 type AppInstall struct {
-	Name    string                 `json:"name"`
-	Params  map[string]interface{} `json:"params"`
-	Version string                 `json:"-"`
-	Key     string                 `json:"-"`
+	Name   string                 `json:"name"`
+	Params map[string]interface{} `json:"params"`
+	Key    string                 `json:"-"`
 }
 
 type AppUnInstall struct {
-	Name    string `json:"name"`
-	Version string `json:"-"`
-	Key     string `json:"-"`
+	Key string `json:"-"`
+}
+
+type AppInstalledOperate struct {
+	Action string `json:"action"`
+	Key    string `json:"-"`
 }
