# docs/swagger.json
@@ -49,8 +49,8 @@
                 }
             }
         },
-        "/apps/sync": {
-            "get": {
+        "/apps/{key}": {
+            "put": {
                 "consumes": [
                     "application/json"
                 ],
@@ -60,54 +60,7 @@
                 "tags": [
                     ""
                 ],
-                "summary": "app sync",
-                "responses": {
-                    "200": {
-                        "description": "ok",
-                        "schema": {
-                            "type": "string"
-                        }
-                    }
-                }
-            }
-        },
-        "/apps/{key}/detail": {
-            "get": {
-                "produces": [
-                    "application/json"
-                ],
-                "tags": [
-                    ""
-                ],
-                "summary": "app detail",
-                "parameters": [
-                    {
-                        "type": "string",
-                        "description": "key",
-                        "name": "key",
-                        "in": "path",
-                        "required": true
-                    }
-                ],
-                "responses": {
-                    "200": {
-                        "description": "ok",
-                        "schema": {
-                            "type": "string"
-                        }
-                    }
-                }
-            }
-        },
-        "/apps/{key}/detail/{version}": {
-            "get": {
-                "produces": [
-                    "application/json"
-                ],
-                "tags": [
-                    ""
-                ],
-                "summary": "app detail",
+                "summary": "app update",
                 "parameters": [
                     {
                         "type": "string",
@@ -117,11 +70,13 @@
                         "required": true
                     },
                     {
-                        "type": "string",
-                        "description": "version",
-                        "name": "version",
-                        "in": "path",
-                        "required": true
+                        "description": "RequestBody",
+                        "name": "data",
+                        "in": "body",
+                        "required": true,
+                        "schema": {
+                            "$ref": "#/definitions/request.AppInstalledOperate"
+                        }
                     }
                 ],
                 "responses": {
@@ -153,9 +108,40 @@
                         "required": true
                     },
                     {
+                        "description": "RequestBody",
+                        "name": "data",
+                        "in": "body",
+                        "required": true,
+                        "schema": {
+                            "$ref": "#/definitions/request.AppInstall"
+                        }
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "ok",
+                        "schema": {
+                            "type": "string"
+                        }
+                    }
+                }
+            },
+            "delete": {
+                "consumes": [
+                    "application/json"
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    ""
+                ],
+                "summary": "app uninstall",
+                "parameters": [
+                    {
                         "type": "string",
-                        "description": "version",
-                        "name": "version",
+                        "description": "key",
+                        "name": "key",
                         "in": "path",
                         "required": true
                     },
@@ -165,8 +151,36 @@
                         "in": "body",
                         "required": true,
                         "schema": {
-                            "$ref": "#/definitions/request.AppInstall"
+                            "$ref": "#/definitions/request.AppUnInstall"
                         }
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "ok",
+                        "schema": {
+                            "type": "string"
+                        }
+                    }
+                }
+            }
+        },
+        "/apps/{key}/detail": {
+            "get": {
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    ""
+                ],
+                "summary": "app detail",
+                "parameters": [
+                    {
+                        "type": "string",
+                        "description": "key",
+                        "name": "key",
+                        "in": "path",
+                        "required": true
                     }
                 ],
                 "responses": {
@@ -214,6 +228,17 @@
                     "additionalProperties": true
                 }
             }
+        },
+        "request.AppInstalledOperate": {
+            "type": "object",
+            "properties": {
+                "action": {
+                    "type": "string"
+                }
+            }
+        },
+        "request.AppUnInstall": {
+            "type": "object"
         }
     },
     "securityDefinitions": {
